<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/back_ground"
    app:layoutDescription="@xml/activity_main_scene"
    tools:context=".MainActivity">

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/dotpatternbackground"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/dotpatternbackground"
        tools:ignore="MissingConstraints" />

    <LinearLayout
        android:id="@+id/headaerlinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="32dp">


        <ImageView
            android:id="@+id/imageViewalignleft"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/baseline_format_align_left_24" />

        <TextView
            android:id="@+id/TextViewRamadan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="167dp"
            android:fontFamily="@font/poppins_semibold"

            android:text="@string/_1_ramadan_1444"
            style="@style/titleText"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/daylinearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="16dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints">


        <TextView
            android:id="@+id/TextViewWednesday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wednesday_22_march"
            android:layout_marginEnd="10dp"
            style="@style/dayText" />

    </LinearLayout>

    <com.airbnb.lottie.LottieAnimationView

        android:id="@+id/ramadankareemlottieAnimationView"
        android:layout_width="350dp"
        android:layout_height="350dp"
        android:layout_marginTop="140dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/ramadankareem"
        tools:ignore="MissingConstraints" />

    <LinearLayout
        android:id="@+id/tipslinearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="16dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints">


    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/tipscardView"
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:layout_margin="10dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="20dp"
        app:cardElevation="10dp"
        app:cardMaxElevation="12dp"
        app:cardPreventCornerOverlap="true"
        app:cardUseCompatPadding="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ramadankareemlottieAnimationView"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:id="@+id/tipofdaylinearLayou"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="32dp">

            <ImageView
                android:id="@+id/ImageViewmicrosoft_tips"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start|center"
                android:src="@drawable/icons8_microsoft_tips" />

            <TextView
                android:id="@+id/TextViewTip"
                style="@style/titleText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="top|start"
                android:layout_marginStart="8dp"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/tip_of_the_day" />
        </LinearLayout>


        <TextView
            android:id="@+id/TextViewmindful"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/be_mindful_use_the_time_during_ramadan_to_focus_on_your_spiritual_practice_meditation_and_mindfulness"
            style="@style/Textnormal" />

    </androidx.cardview.widget.CardView>


    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/lottieAnimationView2"
        android:layout_width="350dp"
        android:layout_height="350dp"
        android:layout_marginTop="350dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/muslimpeoplelifestyleramadan"
        tools:ignore="MissingConstraints"
        tools:visibility="visible" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardprayer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="20dp"
        app:cardElevation="10dp"
        app:cardMaxElevation="12dp"
        app:cardPreventCornerOverlap="true"
        app:cardUseCompatPadding="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lottieAnimationView2"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:id="@+id/prayerLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="32dp">

            <ImageView
                android:id="@+id/ImageViewvery_satisfied"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start|center"
                android:src="@drawable/baseline_sentiment_very_satisfied_24" />

            <TextView
                android:id="@+id/TextViewprayer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="top|start"
                android:layout_marginStart="8dp"
                android:fontFamily="@font/poppins_semibold"

                android:text="@string/today_s_prayer"
                style="@style/titleText" />
        </LinearLayout>


        <TextView
            android:id="@+id/TextViewprayer2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="16dp"
            android:gravity="center"
            android:text="@string/thirst_is_gone"
            style="@style/Textnormal" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/prayertimecardView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="20dp"
        app:cardElevation="10dp"
        app:cardMaxElevation="12dp"
        app:cardPreventCornerOverlap="true"
        app:cardUseCompatPadding="true"
        android:layout_marginTop="165dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tipscardView"
        app:layout_constraintVertical_bias="1.0"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:id="@+id/prayertimeLinearLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_gravity="center|top"
            android:orientation="horizontal"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="32dp">

            <ImageView
                android:id="@+id/ImageViewiconstimemachine"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_gravity="start|center"
                android:src="@drawable/iconstimemachine" />

            <TextView
                android:id="@+id/TextViewPrayerTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="top|start"
                android:layout_marginTop="2dp"
                android:fontFamily="@font/poppins_semibold"

                android:text="@string/prayer_time"
                style="@style/titleText" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/timeLinearLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:gravity="center"
            android:layout_gravity="center"
            android:orientation="horizontal"
            tools:ignore="MissingConstraints">

            <LinearLayout
                android:id="@+id/fajrLinearLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:orientation="vertical"
                tools:ignore="MissingConstraints">

                <TextView
                    android:id="@+id/TextViewFajr"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top|start"
                    android:text="@string/fajr"
                    style="@style/prayerText" />

                <TextView
                    android:id="@+id/TextViewSunrice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top|start"
                    android:text="@string/sunrice"
                    android:layout_marginTop="8dp"
                    style="@style/prayerText"/>

                <TextView
                    android:id="@+id/TextViewDhuhr"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top|start"
                    android:text="@string/dhuhr"
                    android:layout_marginTop="8dp"
                    style="@style/prayerText" />

                <TextView
                    android:id="@+id/TextViewAsr"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top|start"
                    android:text="@string/asr"
                    android:layout_marginTop="8dp"
                style="@style/prayerText" />

                <TextView
                    android:id="@+id/TextViewMaghrib"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top|start"
                    android:text="@string/maghrib"
                    android:layout_marginTop="8dp"
                    style="@style/prayerText" />

                <TextView
                    android:id="@+id/TextViewIsha"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top|start"
                    android:text="@string/isha"
                    android:layout_marginTop="8dp"
                    style="@style/prayerText"/>


            </LinearLayout>

            <LinearLayout
                android:id="@+id/TimerLinearLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginStart="235dp"
                android:orientation="vertical"
                tools:ignore="MissingConstraints">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top|start"

                    android:text="@string/_04_12_am"
                    style="@style/prayerText" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top|start"
                    android:layout_marginTop="8dp"
                    android:text="@string/_05_46_am"
                style="@style/prayerText" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top|start"
                    android:layout_marginTop="8dp"

                    android:text="@string/_12_43_pm"
                    style="@style/prayerText"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top|start"
                    android:layout_marginTop="8dp"

                    android:text="@string/_03_46_pm"
                style="@style/prayerText"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top|start"
                    android:layout_marginTop="8dp"

                    android:text="@string/_06_09_pm"
                    style="@style/prayerText" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top|start"

                    android:layout_marginTop="8dp"
                    android:text="@string/_07_29_pm"
                    style="@style/prayerText"/>
            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.motion.widget.MotionLayout>